port sidebar overlap fixes

--- a/app/javascript/flavours/glitch/styles/sidebar.scss
+++ b/app/javascript/flavours/glitch/styles/sidebar.scss
@@ -4,7 +4,6 @@
 .sidebar {
 
   &-top {
-
     @media screen and (max-width: 889px) {
       .column-link--transparent {
         transform: rotate(90deg);
@@ -15,13 +14,13 @@
         height: fit-content;
         transform: rotate(-90deg);
         transform-origin: 0 0;
-        left: 5px;
+        left: 0;
       }
 
       .navigation-panel {
-        max-height: calc(100vw - 107px);
+        max-height: calc(100vw - 145px);
         overflow: auto;
-        scroll-snap-type: both mandatory;
+        scroll-snap-type: both proximity;
         border-left: none !important;
         background-color: transparent !important;
         height: fit-content !important;
@@ -29,6 +28,11 @@
 
       .navigation-panel::-webkit-scrollbar {
         display: none;
+      }
+
+      /* Add some space between the home button and the left edge */
+      .navigation-panel> :nth-child(2) {
+        margin-top: 10px;
       }
 
       .columns-area__panels__main {
@@ -44,6 +48,15 @@
         overflow-x: hidden;
       }
 
+      .ui__header__links {
+        border-left-color: #393F4F;
+        border-left-width: 1px;
+        border-style: solid;
+        height: 100%;
+        gap: 0px;
+        padding-left: 0;
+      }
+
       .ui__header__links .button[href="/publish"] span {
         display: none;
       }
@@ -53,15 +66,130 @@
       }
 
       .ui__header__links .button[href="/publish"] {
-        padding: 6.6px 0 0 0.8px;
-        font-size: 20px;
+        font-size: 18px;
         font-family: FontAwesome;
-        height: 35px;
-        width: 35px;
+      }
+
+      .ui__header__links>.button {
+        border: none;
+        height: 100%;
+        width: 47.5px;
+        align-items: center;
+        display: flex;
+        color: #D9E1E8;
+      }
+
+      .ui__header__links>.button:hover {
+        color: white;
+        background-color: transparent;
+      }
+
+      .ui__header__links> :not(.button) {
+        margin-left: 5px;
       }
     }
 
     .ui__header__logo {
+      visibility: hidden !important;
+      opacity: 0 !important;
+      width: 0 !important;
+      padding: 0 !important;
+    }
+
+    .navigation-panel__logo {
+      display: none !important;
+    }
+  }
+
+  &-bottom {
+    @media screen and (max-width: 889px) {
+      .column-link--transparent {
+        transform: rotate(90deg);
+        scroll-snap-align: start;
+      }
+
+      .columns-area__panels__pane__inner {
+        height: fit-content;
+        transform: rotate(-90deg);
+        transform-origin: 0 0;
+        left: 0;
+      }
+
+      .navigation-panel {
+        max-height: calc(100vw - 145px);
+        overflow: auto;
+        scroll-snap-type: both proximity;
+        border-left: none !important;
+        background-color: transparent !important;
+        height: fit-content !important;
+      }
+
+      .navigation-panel::-webkit-scrollbar {
+        display: none;
+      }
+
+      /* Add some space between the home button and the left edge */
+      .navigation-panel> :nth-child(2) {
+        margin-top: 10px;
+      }
+
+      .columns-area__panels__main {
+        width: 100%;
+      }
+
+      .columns-area__panels__pane--navigational {
+        min-width: 0;
+        z-index: 999;
+      }
+
+      body.app-body.layout-single-column {
+        overflow-x: hidden;
+      }
+
+      .ui__header__links {
+        border-left-color: #393F4F;
+        border-left-width: 1px;
+        border-style: solid;
+        height: 100%;
+        gap: 0px;
+        padding-left: 0;
+      }
+
+      .ui__header__links .button[href="/publish"] span {
+        display: none;
+      }
+
+      .ui__header__links .button[href="/publish"]::before {
+        content: "";
+      }
+
+      .ui__header__links .button[href="/publish"] {
+        font-size: 18px;
+        font-family: FontAwesome;
+      }
+
+      .ui__header__links>.button {
+        border: none;
+        height: 100%;
+        width: 47.5px;
+        align-items: center;
+        display: flex;
+        color: #D9E1E8;
+      }
+
+      .ui__header__links>.button:hover {
+        color: white;
+        background-color: transparent;
+      }
+
+      .ui__header__links> :not(.button) {
+        margin-left: 5px;
+      }
+    }
+
+    .ui__header__logo {
+      visibility: hidden !important;
+      opacity: 0 !important;
       width: 0 !important;
       padding: 0 !important;
     }
@@ -70,41 +198,20 @@
       display: none !important;
     }
 
-
-  }
-
-  &-bottom {
-
+    /* Above contents are inherited from topbar.css */
     @media screen and (max-width: 889px) {
       .column-link--transparent {
-        transform: rotate(-90deg) scaleX(-1);
-        scroll-snap-align: start;
+        transform: rotate(-90deg) scaleX(-1) !important;
       }
 
       .columns-area__panels__pane__inner {
-        height: fit-content;
-        transform: rotate(90deg);
-        transform-origin: bottom right;
+        transform: rotate(90deg) !important;
+        transform-origin: bottom right !important;
+        left: -55px !important;
         bottom: 0;
-        left: -50px;
       }
 
       .navigation-panel {
-        max-height: calc(100vw - 107px);
-        overflow: auto;
-        scroll-snap-type: both mandatory;
-        transform: scaleY(-1);
-        border-left: none !important;
-        background-color: transparent !important;
-        height: fit-content !important;
-      }
-
-      .ui__header {
-        transform: scaleY(-1);
-        transform-origin: 50vw 50vh;
-      }
-
-      .ui__header__links * {
         transform: scaleY(-1);
       }
 
@@ -117,47 +224,14 @@
         top: 0;
       }
 
-      .navigation-panel::-webkit-scrollbar {
-        display: none;
+      .ui__header {
+        transform: scaleY(-1);
+        transform-origin: 50vw 50vh;
       }
 
-      .columns-area__panels__main {
-        width: 100%;
+      .ui__header__links>* {
+        transform: scaleY(-1);
       }
-
-      .columns-area__panels__pane--navigational {
-        min-width: 0;
-        z-index: 999;
-      }
-
-      body.app-body.layout-single-column {
-        overflow-x: hidden;
-      }
-
-      .ui__header__links .button[href="/publish"] span {
-        display: none;
-      }
-
-      .ui__header__links .button[href="/publish"]::before {
-        content: "";
-      }
-
-      .ui__header__links .button[href="/publish"] {
-        padding: 6.6px 0 0 0.8px;
-        font-size: 20px;
-        font-family: FontAwesome;
-        height: 35px;
-        width: 35px;
-      }
-    }
-
-    .ui__header__logo {
-      width: 0 !important;
-      padding: 0 !important;
-    }
-
-    .navigation-panel__logo {
-      display: none !important;
     }
   }
 }
